2003-04-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbimp.c (main): Pass a line that starts
	with "Status:" on to stdout. This is used by
	a parser that wants to pass a status message
	to SN through the pipe to dbimp.
	* db/dbutils.c (put_status_parsing_file):
	Use the Paf_Pipe_Write method to write to the
	dbimp pipe instead of writing a status
	message to stdout. Also use a new status
	format so that dbimp knows what input should
	be passed on to SN.
	* gui/misc.tcl (event_LoadPipeInput):
	Rename res local var to eof. Check for
	empty input line earlier on in method.
	Check for a status message that starts
	with "Status: Parsing:" since this is now
	used by the parsers and dbimp.

2003-04-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbimp.c (main): Print error message to
	stderr instead of stdout. Slight change to
	a couple of error messages.
	* db/dbutils.c (db_remove_file_def,
	db_remove_file_xfer_using_keys,
	Paf_Pipe_Create):
	Use fprintf instead of printf when printing
	status message to stdout. Print error msg
	to stderr instead of stdout in a couple
	of functions.
	* parsers/cobol/skeleton.c (log_symbol_filename,
	main):
	Print error messages to stderr instead of stdout.
	This is critical for parsers since we are going
	to be redirecting the stdout of parsers into
	dbimp later on.
	* parsers/cpp/skeleton.c (log_symbol_filename,
	main): Ditto.
	* parsers/fortran/ftnchek.c (log_symbol_filename,
	main): Ditto.
	* parsers/java/skeleton.c (log_symbol_filename,
	main): Ditto.
	* parsers/tcl/skeleton.c (log_symbol_filename,
	main): Ditto.

2003-04-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (main):
	* parsers/java/skeleton.c (main):
	* parsers/tcl/skeleton.c (main):
	* parsers/toolbox/snptools.c (sn_parse_all):
	Skip empty lines and lines that start
	with the # character when processing a
	file name passed in via the -y option.
	This makes the other parsers match
	the cpp parser implementation.
